KItemListHeaderWidget: don't crash if widget == nullptr

BUG: 449238